使用js下载base64格式图片

--- a/web/pages/base/index.htm
+++ b/web/pages/base/index.htm
@@ -51,7 +51,7 @@
             <span class="deg rb"><i></i></span>
             <div class="totalCar">
                 <div class="titleTal">
-                    <p>服务车辆总次数</p>
+                    <p>服务总次数</p>
                 </div>
                 <div class="carNum" id="num">
                     <div class="line">
@@ -63,7 +63,7 @@
                 </div>
                 <div class="totalCar">
                     <div class="titleTal">
-                        <p>停车费用缴纳总金额(元)</p>
+                        <p>****费用缴纳总金额(元)</p>
                     </div>
                     <div class="carNum"  id="totalMoney">
                         <div class="line">
