使用js下载base64格式图片

--- a/web/pages/upLoadFile/index.htm
+++ b/web/pages/upLoadFile/index.htm
@@ -92,7 +92,7 @@
         <div class="tab-pane" id="fundsAccountForm">
             <div id="view" style="width: 547px;height: 398px;margin: 0 auto;"></div>
             <div class="row">
-                <span class="btn-inter" id="downLoad">下载</span>
+                <span class="btn-inter" id="downLoad" onclick="Download()">下载</span>
             </div>
         </div>
     </div>
