--- a/web/pages/upLoadFile/index.htm
+++ b/web/pages/upLoadFile/index.htm
@@ -59,15 +59,15 @@
                             <input type="text" readonly class="form-control" id="datetimepicker" name="datetimepicker" placeholder="获奖时间">
                         </div>
                     </div>
-                    <!--<div class="form-group">-->
-                        <!--<label for="avatar" class="col-md-12 control-label">头像</label>-->
-                        <!--<div class="col-sm-12">-->
-                            <!--<div></div>-->
-                            <!--<a class="a-upload">-->
-                                <!--<input multiple type="file" name="" id="avatar">头像上传-->
-                            <!--</a>-->
-                         <!--</div>-->
-                    <!--</div>-->
+                    <div class="form-group">
+                        <label for="avatar" class="col-md-12 control-label">头像</label>
+                        <div class="col-sm-12">
+                            <div></div>
+                            <a class="a-upload">
+                                <input multiple type="file" name="" id="avatar">头像上传
+                            </a>
+                         </div>
+                    </div>
                     <div class="row" style="text-align: right">
                         <span class="btn-inter" id="config">生成</span>
 
@@ -83,7 +83,7 @@
                         <span class="month"></span>
                         <span class="data"></span>
                         <div class="avatar">
-                            <!--<img class="" src="../../images/avatar.png"/>-->
+                            <img src=""/>
                         </div>
                     </div>
                 </div>
