移动端压缩图片

--- a/web/pages/upLoadFile/index.htm
+++ b/web/pages/upLoadFile/index.htm
@@ -83,7 +83,7 @@
                         <span class="month"></span>
                         <span class="data"></span>
                         <div class="avatar">
-                            <img src=""/>
+                            <img id="img" src=""/>
                         </div>
                     </div>
                 </div>
