--- a/web/pages/app/sorket.htm
+++ b/web/pages/app/sorket.htm
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Window-target" content="_top">
     <title>Music</title>
     <link rel="shortcut icon" href="../../../logo_icon.png"/>
     <link rel="stylesheet" href="../../styles/bootstrap/bootstrap.css">
@@ -32,7 +33,7 @@
 <script>
     $('.posit').click(function(){
         $('#modal').load('../QRcode/index.htm')
-        $.cookie('url', 'http://116.62.168.126/pages/app/photo.htm');
+        $.cookie('url', 'http://116.62.168.126/pages/app/photo.htm?v=1.0');
     })
 </script>
 </body>
