--- a/web/pages/jqZtree/index.html
+++ b/web/pages/jqZtree/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="../../scripts/common/ztree/jquery.ztree.all-3.5.js"></script>
 </head>
 <body>
 
