阿里云部署

--- a/web/pages/frame.htm
+++ b/web/pages/frame.htm
@@ -44,12 +44,12 @@
                         报警设备
                     </a>
                 </li>
-                <li role="presentation">
-                    <a role="menuitem" class="open-new-tab" data-gotarget="order/order/suspiciousOrderAllList.htm" tabindex="-1" href="#">
-                        <span class="badge pull-right"></span>
-                        异常订单
-                    </a>
-                </li>
+                <!--<li role="presentation">-->
+                    <!--<a role="menuitem" class="open-new-tab" data-gotarget="order/order/suspiciousOrderAllList.htm" tabindex="-1" href="#">-->
+                        <!--<span class="badge pull-right"></span>-->
+                        <!--异常订单-->
+                    <!--</a>-->
+                <!--</li>-->
             </ul>
         </div>
         <div id="userInfo" class="user-info-container">
