--- a/web/pages/map/index.htm
+++ b/web/pages/map/index.htm
@@ -13,7 +13,9 @@
     <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=a58194981005afde662f5880362e9959"></script>
     <script type="text/javascript" src="http://cache.amap.com/lbs/static/addToolbar.js"></script>
     <script type="text/javascript" src="../../scripts/lib/juicer-min.js"></script>
-    <script src="../../scripts/map/ajax.js"></script>
+    <script src="../../scripts/common/properties.js"></script>
+    <script src="../../scripts/common/jquery.cookie.min.js"></script>
+    <script src="../../scripts/common/common.js"></script>
 
     <script type="text/javascript" src="http://a.amap.com/jsapi_demos/static/resource/heatmapData.js"></script>
 </head>
