--- a/web/pages/Device/glas.htm
+++ b/web/pages/Device/glas.htm
@@ -28,12 +28,12 @@
 <button class="btn-inter posit">点击生成二维码</button>
 <div id="modal"></div>
 <div id="center">
-    <iframe src="http://116.62.168.126/pages/Device/Nouth.html" width="100%" height="100%" frameborder="0"></iframe>
+    <iframe src="http://116.62.168.126/pages/Device/eye.htm" width="100%" height="100%" frameborder="0"></iframe>
 </div>
 <script>
     $('.posit').click(function(){
         $('#modal').load('../QRcode/index.htm')
-        $.cookie('url', 'http://116.62.168.126/pages/Device/Nouth.html?v=1.0');
+        $.cookie('url', 'http://116.62.168.126/pages/Device/eye.htm?v=1.0');
     })
 </script>
 </body>
